fix: fix vertical alignment in LabelLine

--- a/packages/pelagos/src/components/LabelLine.less
+++ b/packages/pelagos/src/components/LabelLine.less
@@ -4,6 +4,7 @@
 .LabelLine__label {
 	flex-direction: row;
 	margin-bottom: @sp-08;
+	align-items: baseline;
 }
 
 .LabelLine__optional {
